fix: fix add-task responsive div styles and fix button icons on mobile on edit task overlay and fix datepicker at add task overlay-edit

--- a/styles/add-task-right-inputs.css
+++ b/styles/add-task-right-inputs.css
@@ -94,6 +94,7 @@
 
     &::-webkit-scrollbar {
         width: 6px;
+        height: 6px;
     }
 
     &::-webkit-scrollbar-thumb {
@@ -143,6 +144,7 @@
     overflow-x: auto;
     overflow-y: auto;
     transition: width 0.5s ease;
+    max-width: 90%;
 
     &::-webkit-scrollbar {
         height: 6px;
